tests/istio_testcases/example_policies/testcase3/testcase3-valid-syntax-source-not-empty.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-source-not-empty
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - from:
    - source:
        namespaces: []
        notNamespaces: ["default"]
