tests/istio_testcases/example_policies/testcase3/testcase3-valid-syntax-when-is-empty.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-empty-when
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - when: []
