tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-condition-empty-values-2.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-when-condition-empy-values
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - when:
      - key: source.namespace
        values: []  # values or notValues must be set
