tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-condition-empty-values.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-when-is-null
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - when:
      - key: source.namespace  # values or notValues must be set
