tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-condition-values-null.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-condition-values-null
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - when:
      - key: source.namespace
        values: ["default"]
        notValues:     # notValues cannot be null (only type array)
