tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-deny-without-rules.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-error-deny-without-rules
  namespace: default
spec:
  action: DENY
