tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-from-is-empty.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-empty-from
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - from: [] # from cannot be an empty array
