tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-from-is-null.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-from-is-null
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - from: # from cannot be null
