tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-key-is-empty.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-when-is-null
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - when:
      - {}  # must have key
