tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-namespaces-is-null.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-namespaces-is-null
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - from:
    - source:
        namespaces: # namespaces cannot be null
