tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-operation-is-empty.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-oeration-is-empty
  namespace: default
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        ports: []
