tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-ports-is-null.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-ports-is-null
  namespace: default
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        ports: # cannot be null
