tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-rule-is-null.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-rule-is-null
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - # rule cannot be null
