tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-source-is-empty-2.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-empty-source
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - from:
    - source: {} # source cannot be empty
