tests/istio_testcases/example_policies/testcase3/testcase3-parse-error-to-is-empty.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-empty-to
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - to: [] # to cannot be an empty array
